[gd_scene load_steps=5 format=3 uid="uid://bg48sy74gdep7"]

[ext_resource type="Script" path="res://assets/menus/pause/pause.gd" id="1_k13m8"]
[ext_resource type="FontFile" uid="uid://bi74ubrruvmx8" path="res://fonts/SpaceMono-Bold.ttf" id="2_bnr2h"]
[ext_resource type="Theme" uid="uid://kjjq0xk0r8i5" path="res://assets/menus/pause/pause_theme.tres" id="2_m7l2w"]

[sub_resource type="Theme" id="Theme_skq2l"]
Button/colors/font_color = Color(1, 0, 0, 1)
Button/colors/font_hover_color = Color(0.94902, 0, 0.517647, 1)

[node name="Pause" type="CanvasLayer"]
script = ExtResource("1_k13m8")

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="pause" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.423529, 0, 1)
theme_override_fonts/font = ExtResource("2_bnr2h")
theme_override_font_sizes/font_size = 100
text = "PAUSE"
horizontal_alignment = 1

[node name="volume_display" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="volume_lable" type="Label" parent="CenterContainer/VBoxContainer/volume_display"]
layout_mode = 2
theme = ExtResource("2_m7l2w")
theme_override_fonts/font = ExtResource("2_bnr2h")
theme_override_font_sizes/font_size = 50
text = "volume:"
horizontal_alignment = 1

[node name="volume_display" type="Label" parent="CenterContainer/VBoxContainer/volume_display"]
layout_mode = 2
theme = ExtResource("2_m7l2w")
theme_override_fonts/font = ExtResource("2_bnr2h")
theme_override_font_sizes/font_size = 50
text = "12"

[node name="volume_slider" type="HSlider" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_m7l2w")
value = 60.0

[node name="sensitivity" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="sensitivity_lable" type="Label" parent="CenterContainer/VBoxContainer/sensitivity"]
layout_mode = 2
theme = ExtResource("2_m7l2w")
theme_override_fonts/font = ExtResource("2_bnr2h")
theme_override_font_sizes/font_size = 50
text = "sensitivity:"
horizontal_alignment = 1

[node name="sensitivity_display" type="Label" parent="CenterContainer/VBoxContainer/sensitivity"]
layout_mode = 2
theme = ExtResource("2_m7l2w")
theme_override_fonts/font = ExtResource("2_bnr2h")
theme_override_font_sizes/font_size = 50
text = "12"

[node name="sensitivity_slider" type="HSlider" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_m7l2w")
max_value = 50.0
value = 9.0

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_skq2l")
theme_override_fonts/font = ExtResource("2_bnr2h")
theme_override_font_sizes/font_size = 50
text = "NEW GAME
"

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_skq2l")
theme_override_fonts/font = ExtResource("2_bnr2h")
theme_override_font_sizes/font_size = 50
text = "QUIT GAME
"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/Button2" to="." method="_on_button_2_button_down"]
[connection signal="button_down" from="CenterContainer/VBoxContainer/Button" to="." method="_on_button_button_down"]
